--- a/構造体/説明.md
+++ b/構造体/説明.md
@@ -1,1 +1,53 @@
+```c
+struct タグ名{
+データ型　メンバ名;
+データ型　メンバ名;
+         ・
+         ・
+         ・
+         ・
+}
+```
+構造体を宣言するときは```struct``` というのを用いる。
+# ➂構造体の初期化
+
+__________________________________________________________________________________________________
+
+
+![image](https://user-images.githubusercontent.com/82156802/136477615-09ea4a97-a35a-4642-a5e1-c35e5cba35ec.png)
+
+
+初期化で注意することは、データを初期化するときは、定義した順番に初期化する。
+
+
+```c
+//構造体の型宣言
+
+struct student{
+
+    int no; // 学籍番号
+
+    char name[256]; // 氏名
+
+    int year; // 学年
+
+    char student_class[256]; // クラス
+
+};
+
+//構造体の宣言と初期化の代入
+
+struct student student[200] = {
+
+    {学籍番号, 氏名, 学年, クラス},
+
+    {学籍番号, 氏名, 学年, クラス},
+
+    {学籍番号, 氏名, 学年, クラス},
+
+    {学籍番号, 学年, 氏名, クラス} //この行はエラーになります
+
+};
+
+```
 
