--- a/構造体/説明.md
+++ b/構造体/説明.md
@@ -14,6 +14,9 @@ struct タグ名{
 }
 ```
 構造体を宣言するときは```struct``` というのを用いる。
+#　➁構造体の宣言
+
+_________________________________________________________________________________________________
 # ➂構造体の初期化
 
 __________________________________________________________________________________________________
