--- a/構造体/説明.md
+++ b/構造体/説明.md
@@ -63,3 +63,53 @@ struct student student[200] = {
 
 ```
 
+# ➃構造体のデータ参照
+
+
+_____________________________________________________________________________
+
+
+構造体に格納したデータを変数に代入するときには以下のように参照します。
+
+
+![image](https://user-images.githubusercontent.com/82156802/136480824-31b66741-14f6-447e-875a-e5f8d0987e50.png)
+
+
+# 例1　構造体を作ろう
+![image](https://user-images.githubusercontent.com/82156802/136480989-42018ef4-aeff-482a-a9ac-9ecf797df54f.png)
+
+
+# ➄構造体とポインタ
+
+特徴
+・普通のポインタではアドレスの中身を表示するときに「*」を付けたけど、構造体の時は「*」は必要ない
+
+
+・ポインタだけでは各メンバ変数の値を見ることが出来ない
+=>構造体のポインタは1つのデータ郡の先頭アドレスを指していて、メンバ変数をしているわけではない。
+
+
+(1)ポインタを用いた構造体の宣言
+
+
+![image](https://user-images.githubusercontent.com/82156802/136481340-3a12dfd8-3de2-4d3e-97ee-cd9532bd60d8.png)
+
+
+(2)
+
+
+![image](https://user-images.githubusercontent.com/82156802/136481353-4bb154e1-2f74-44b3-a7eb-c89c51cd2b57.png)
+
+
+![image](https://user-images.githubusercontent.com/82156802/136481381-bc7a2a12-d1f4-4ed5-aed6-4545bb9bda85.png)
+
+(３)ポインタ構造体のデータ参照
+
+
+_________________________________________________________________________________________________
+
+
+
+
+
+
