--- a/構造体/説明.md
+++ b/構造体/説明.md
@@ -108,8 +108,29 @@ _____________________________________________________________________________
 
 _________________________________________________________________________________________________
 
-
-
-
+```c
+#include<stdio.h>
+struct OLD
+{
+	int no;
+	char *name;
+	int s_year;
+	char s_class;
+};
+int main(){
+	int i = 0;
+	struct  OLD old[2] = {
+		{1,"仲谷淳人",3,'A'},
+		{2,"武田信玄",3,'A'},
+	};
+	struct OLD *p;
+	p = old;
+	for(i=0;i<15;i++){
+		  printf("%7d%15s%5d%10c\n", (p+i)->no, (p+i)->name, (p+i)->s_year, (p+i)->s_class);
+	}
+	
+	
+}
+```
 
 
