--- a/ポインタ/説明.md
+++ b/ポインタ/説明.md
@@ -1,1 +1,65 @@
+# (1)間接演算子「*」の意味と使い方
+
+
+# (2)ポインタを使う意味
+
+
+______________________________________________________________________________________
+
+
+➀関数を用いた時、直接main関数内で定義されている変数の値を変更することが出来る。
+　なぜなら、ポインタはメモリを直接操作する手法だからだ。
+
+
+```c
+#include<stdio.h>
+void hiroko(int *height){
+	if(*height < 180){
+		*height = 180;
+	}
+}
+int main(void){
+	int sato = 178;
+	int sanaka = 175;
+	int masaki = 179;
+	hiroko(&masaki);
+  /*masakiの値を関数で直接変更している*/
+	printf("佐藤君の伸長:%d\n",sato);
+	printf("佐中君の伸長:%d\n",sanaka);
+	printf("真崎君の伸長:%d\n",masaki);
+}
+```
+
+## 和と差を求める関数
+
+
+```c
+#include<stdio.h>
+void sum_diff(int n1, int n2,int *sum , int *diff){
+	*sum = n1 + n2;
+	*diff =  (n1>n2) ? n1-n2:n2-n1;
+}
+int main(void){
+	int na,nb;
+	int wa = 0,wb=0;
+	puts("二つの整数を入力してください");
+	puts("整数A"); scanf("%d",&na); 
+	puts("整数B"); scanf("%d",&nb);
+	sum_diff(na,nb,&wa,&wb);
+	printf("和は%dで差は%dです",wa,wb);
+	
+}
+
+```
+※重要
+
+
+オブジェクトへのポインタを仮変数に受け取れば、そのポインタに間接演算子*を適用することによって、そのオブジェクトそのものにアクセスできる。
+
+
+これを利用すると、呼び出し元が用意したオブジェクトの値を呼び出された側で変更できる。
+
+
+
+## 二つの値の交換
 
