--- a/ビット論理演算子/説明.md
+++ b/ビット論理演算子/説明.md
@@ -1,1 +1,20 @@
+# ```&``` ```|``` ```^``` ```~```
 
+それぞれ、ANDOR XOR NOT(1の補数)
+
+
+NOTはビット反転を行う
+
+# ```>>``` ```<<```
+
+
+2進数の数を指定したビット数だけ左右にずらす
+
+
+# 例
+
+
+➀
+
+
+➁
