--- a/ビット論理演算子/説明.md
+++ b/ビット論理演算子/説明.md
@@ -16,5 +16,20 @@ NOTはビット反転を行う
 
 ➀
 
+```c
+#include <stdio.h>
+int main(void){
+int i,k;
+scanf("%d",&k);
+for(i=31;i>=0;--i){
+printf("%d", (k >> i) & 1);
+}
+printf("\n");
+return 0;
+}
+```
 
 ➁
+
+```c
+```
