--- a/ビット論理演算子/説明.md
+++ b/ビット論理演算子/説明.md
@@ -28,6 +28,7 @@ printf("\n");
 return 0;
 }
 ```
+![image](https://user-images.githubusercontent.com/82156802/136688969-269560af-a439-493a-add1-5914cd8fb6c9.png)
 
 ➁
 
