--- a/ビット論理演算子/説明.md
+++ b/ビット論理演算子/説明.md
@@ -33,4 +33,12 @@ return 0;
 ➁
 
 ```c
+#include<stdio.h>
+int main(void){
+	int i = 1;
+	for (i = 0; i < 40; i=i+1){
+		printf("%d:%d\n",i,1<<i);
+	}
+	return 0;
+}
 ```
