--- a/ビット論理演算子/説明.md
+++ b/ビット論理演算子/説明.md
@@ -42,3 +42,36 @@ int main(void){
 	return 0;
 }
 ```
+![image](https://user-images.githubusercontent.com/82156802/136690746-12c1068a-57fc-4d6d-b30b-d7b42aa8fb27.png)
+```c
+#include<stdio.h>
+int main(void){
+	short int i = 1;
+	for (i = 0; i < 40; i=i+1){
+		printf("%d:%d\n",i,1<<i);
+	}
+	return 0;
+}
+```
+![image](https://user-images.githubusercontent.com/82156802/136690450-fab801f6-9ed9-421b-9361-c5f7858d33fb.png)
+
+```c
+#include <stdio.h>
+int main(void){
+int a,b;
+unsigned int ua,ub;
+scanf("%d",&a);
+scanf("%u",&ua);
+b=(~a)+1;
+ub = (~ua)+1;
+printf("a:%d b:%d \n",a,b);
+printf("ua:%u ub:%u\n",ua,ub);
+return 0;
+}
+
+```
+
+
+![image](https://user-images.githubusercontent.com/82156802/136691583-95bbd85a-d1ca-41d7-9a52-232183dd482d.png)
+
+
