--- a/ポインタ/説明.md
+++ b/ポインタ/説明.md
@@ -1,5 +1,12 @@
 # (1)間接演算子「*」の意味と使い方
 
+宣言するときに「*」を付けることでその変数がポインタ変数であることを示す。
+
+また、別の使い方としては、*()の()内にアドレスを渡すことで、そのアドレスに格納されている値にアクセスすることが出来る。
+
+つまり、「*」は単なる通し番号であるアドレスから変数という実態を読みが得させることが出来る。
+
+![image](https://user-images.githubusercontent.com/82156802/136716815-8ac5a2b2-888f-445f-9f30-e69a3e3d80c5.png)
 
 # (2)ポインタを使う意味
 
