--- a/ポインタ/説明.md
+++ b/ポインタ/説明.md
@@ -7,7 +7,10 @@
 つまり、「*」は単なる通し番号であるアドレスから変数という実態を読みが得させることが出来る。
 
 ![image](https://user-images.githubusercontent.com/82156802/136716815-8ac5a2b2-888f-445f-9f30-e69a3e3d80c5.png)
-
+```c
+*(アドレス)=値;
+```
+とすることで、アドレスを用いて変数を代入することが出来る。
 # (2)ポインタを使う意味
 
 
