--- a/メモリの動的確保/説明.md
+++ b/メモリの動的確保/説明.md
@@ -1,1 +1,23 @@
+```c
+#include<stdio.h>
+#include<stdlib.h>
+int main(void){
+	int i,n;
+	int *ip;
+/**/
+puts("Input a number:"); scanf("%d",&n);
+ip = (int *)malloc(n *sizeof(int));
+/*malloc()関数は、指定されたサイズのメモリの確保に成功すると、その先頭アドレスを返却地として返す。
+よって、ipにアドレスを渡せばよい*/
+for ( i = 0; i < n; i++){
+	ip[i] = i;
+}
+for ( i = 0; i < n; i++){
+	printf("%d",ip[i]);
+	printf("\n");
+}
+free(ip);
+return 0;
 
+}
+```
