--- a/ポインタ/関数のポインタ/説明.md
+++ b/ポインタ/関数のポインタ/説明.md
@@ -1,1 +1,20 @@
+関数の例を出して考える
+
+
+```c
+double func(int); //int型整数を受け取ってdoubel型の値を返却する関数
+```
+
+この関数を指すポインタの型は、「int型の引数を受けとってdouble型の値を返却する関数へのポインタ」となる。
+
+
+その肩を持つポインタ```fp```の宣言は、次のようになる。
+
+
+```c
+double (*fp)(int);//intを受け取ってdoubleを返却する関数へのポインタ
+```
+
+変数名の前に*を置くのは、オブジェクトへのポインタの宣言と同じです。ただし、変数名を（）で囲むの必要がある点は異なる。
+
 
