--- a/再帰的アルゴリズム/再帰の基本/説明.md
+++ b/再帰的アルゴリズム/再帰の基本/説明.md
@@ -1,3 +1,32 @@
 # 階乗値を求める再帰アルゴリズム
 
 # ユークリッドの互除法
+
+
+
+```c
+#include<stdio.h>
+int gcd(int x,int y){
+	if(y==0){
+		return x;
+	}
+	else{
+		return gcd(y,x%y);
+	}
+}
+int main(void){
+	int x,y;
+	puts("二つの整数の最大公約数を求めます");
+	printf("整数を入力してください\n");
+	scanf("%d",&x);
+	puts("二つの整数の最大公約数を求めます");
+	scanf("%d",&y);
+
+	printf("最大公約数は%dです\n",gcd(x,y));
+	return 0;
+
+}
+```
+
+
+gcd関数を再起を用いずに実装する。
