--- a/再帰的アルゴリズム/再帰の基本/説明.md
+++ b/再帰的アルゴリズム/再帰の基本/説明.md
@@ -1,5 +1,23 @@
 # 階乗値を求める再帰アルゴリズム
 
+```c
+#include<stdio.h>
+int factorical(int n){
+	if(n>0){
+		return n* factorical(n-1);
+	}else{
+		return 1;
+	}
+}
+int main(void){
+	int n;
+	puts("整数を入力してください");
+	scanf("%d",&n);
+	printf("%d",factorical(n));
+
+}
+```
+
 # ユークリッドの互除法
 
 
