--- a/再帰的アルゴリズム/再帰の基本/説明.md
+++ b/再帰的アルゴリズム/再帰の基本/説明.md
@@ -18,6 +18,31 @@ int main(void){
 }
 ```
 
+factoricalを再帰を使わずに表現する
+```c
+#include<stdio.h>
+int factorical(int n){
+	if(n>0){
+		return n* factorical(n-1);
+	}else{
+		return 1;
+	}
+}
+int factorial_not(int *n){
+	int i;
+	for(i=*n-1;i>0;i--){
+		*n = *n * i;
+	}
+	return *n;
+}
+int main(void){
+	int n;
+	puts("整数を入力してください");
+	scanf("%d",&n);
+	printf("%d",factorical(n));
+
+}
+```
 # ユークリッドの互除法
 
 
