--- a/再帰的アルゴリズム/再帰の基本/説明.md
+++ b/再帰的アルゴリズム/再帰の基本/説明.md
@@ -71,5 +71,32 @@ int main(void){
 }
 ```
 
-
 gcd関数を再起を用いずに実装する。
+```c
+#include<stdio.h>
+int gcd_1(int *x,int *y){
+	int z;
+	while (1)
+	{
+		if(*y==0){
+			return *x;
+			break;
+		}
+		z = *y;
+		*y = *x % *y;
+		*x = z;
+
+	}
+	
+}
+
+int main(void){
+	int x,y;
+	scanf("%d",&x);
+	scanf("%d",&y);
+/*gcd_no(&x,&y);*/
+printf("%d",gcd_1(&x,&y));
+	return 0;
+
+}
+```
